--- a/estilo.css
+++ b/estilo.css
@@ -151,3 +151,51 @@ body {
     max-width: 300px;
   }
 }
+
+/* Estilo para a seção de benefícios */
+
+section#beneficios {
+  background-color: #000000;
+  padding: 40px;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+section#beneficios div{
+  display: block;
+  background-color: #000000;
+  padding: 40px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+section#beneficios h2 {
+  font-size: 36px;
+  color: #FFFFFF;
+  font-weight: 700;
+  margin: 20px 0px 40px 100px;
+  font-family: "Montserrat";
+  text-align: left;
+}
+
+section#beneficios div#lista-beneficios {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  text-align: left;
+}
+
+section#beneficios div#lista-beneficios svg {
+  margin: 0px 12px 20px 0px;
+  vertical-align: middle;
+}
+
+section#beneficios div#lista-beneficios li {
+  display: flex;
+  font-size: 18px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  font-family: "Montserrat";
+  line-height: 1.6;
+}
