--- a/estilo.css
+++ b/estilo.css
@@ -121,6 +121,50 @@ body {
   background-color: #2E0854;
 }
 
+#sobre{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(
+    rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+    url(/images/5\ BEST\ SMART\ GLASSES\ 2024\ 1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+  /* border: 5px solid blue; */
+  
+}
+
+
+#sobre div{
+ padding: 0 30px;
+}
+
+#sobre div h1{
+  font-size: 42px;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 20px;
+  font-family: "Montserrat";
+  letter-spacing: 2px;
+  text-align: left;
+  margin-bottom: 40px; 
+  margin-top: 80px; 
+}
+
+#sobre div p{
+  font-family: "Open Sans";
+  color: aliceblue;
+  margin-bottom: 20px;
+  font-size: 22px;
+  text-align: left;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+/* Mobile */
 @media (max-width: 768px) {
   .menu-icon {
     display: block;
