--- a/estilo.css
+++ b/estilo.css
@@ -164,6 +164,60 @@ body {
   margin-top: 20px;
 }
 
+/* Estilo para a seção de benefícios */
+section#beneficios {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  background-color: #000000;
+  padding: 40px;
+  position: relative;
+  height: 100vh;
+}
+
+section#beneficios div{
+  display: block;
+  background-color: #000000;
+  padding: 40px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+section#beneficios h2 {
+  font-size: 36px;
+  color: #FFFFFF;
+  font-weight: 700;
+  margin: 20px 0px 40px 100px;
+  font-family: "Montserrat";
+  text-align: left;
+}
+
+section#beneficios div#lista-beneficios {
+  display: flex;
+  flex-wrap: wrap; 
+  list-style: none;
+  padding: 0;
+  text-align: left;
+  gap: 40px;
+}
+
+section#beneficios div#lista-beneficios svg {
+  margin: 0px 20px 20px 0px;
+  vertical-align: middle;
+  margin-top: 10px;
+}
+
+section#beneficios div#lista-beneficios li {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  max-width: 400px;
+  font-family: "Montserrat";
+  line-height: 1.6;
+}
+
 /* Rodapé */
 footer{
   display: flex;
@@ -217,13 +271,8 @@ footer div img{
   .imagem img {
     max-width: 300px;
   }
-<<<<<<< HEAD
-=======
-}
 
-/* Estilo para a seção de benefícios */
-
-section#beneficios {
+  section#beneficios {
   display: flex;
   justify-content: center;
   align-items: center;  
@@ -253,6 +302,8 @@ section#beneficios h2 {
 section#beneficios div#lista-beneficios {
   display: flex;
   flex-wrap: wrap; 
+  transition: opacity 0.2s ease;
+  opacity: 1;
   list-style: none;
   padding: 0;
   text-align: left;
@@ -274,5 +325,6 @@ section#beneficios div#lista-beneficios li {
   max-width: 400px;
   font-family: "Montserrat";
   line-height: 1.6;
->>>>>>> beneficios
+}
+
 }
