--- a/estilo.css
+++ b/estilo.css
@@ -217,8 +217,28 @@ footer div img{
   .imagem img {
     max-width: 300px;
   }
-<<<<<<< HEAD
-=======
+
+  .titulo h1 {
+  font-size: 30px;
+  }
+
+  .imagem {
+    position: relative;
+    top: 10px;
+    right: 20px;
+    z-index: 1000;
+  }
+
+  .subtitulo h2 {
+    font-size: 20px;
+  }
+
+  #sobre div h1{
+    font-size: 30px;
+  }
+  #sobre div p{
+    font-size: 20px;
+  }
 }
 
 /* Estilo para a seção de benefícios */
@@ -274,5 +294,5 @@ section#beneficios div#lista-beneficios li {
   max-width: 400px;
   font-family: "Montserrat";
   line-height: 1.6;
->>>>>>> beneficios
+
 }
