--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@ body {
 }
 
 .navbar {
-  background-color: #2E085f;
+  background-color: #2E0854;
   padding: 0 60px;
   position: fixed;
   width: 100%;
@@ -128,7 +128,7 @@ body {
   height: 100vh;
   background-image: linear-gradient(
     rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
-    url(/images/5\ BEST\ SMART\ GLASSES\ 2024\ 1.png);
+    url(images/5\ BEST\ SMART\ GLASSES\ 2024\ 1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -273,7 +273,7 @@ footer div img{
   }
 
   .titulo h1 {
-  font-size: 30px;
+    font-size: 30px;
   }
 
   .imagem {
