--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,8 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  max-width: 100%;
   font-family: "Open Sans", sans-serif;
 }
 
