--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   position: relative;
   margin: 0;
@@ -386,7 +389,7 @@ section#beneficios div#lista-beneficios li {
     font-weight: 600;
 }
 .form-wrapper input {
-    width: 93%;
+    width: 100%;
     padding: 14px;
     margin-bottom: 15px;
     border: none;
